task list - fix overflow style bug

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
   transform: translate(-50%, -50%);
   padding: 1rem;
   background-color: var(--color-light-purple-opacity);
+  max-height: 95%;
 }
 
 body {
