--- a/src/components/tasks/Tasks.css
+++ b/src/components/tasks/Tasks.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   margin-top: 50px;
   padding: 0 1rem;
+  max-height: 400px !important;
 }
 
 .tasks > .header {
@@ -39,6 +40,26 @@
   gap: 12px;
   background-color: inherit;
   border-radius: 10px;
+  overflow: auto;
+  max-height: 300px;
+}
+
+.list::-webkit-scrollbar {
+  width: 10px;
+}
+
+.list::-webkit-scrollbar-track {
+  background-color: #8b5a8c;
+  border-radius: 10px;
+}
+
+.list::-webkit-scrollbar-thumb {
+  background-color: #333;
+  border-radius: 10px;
+}
+
+.list::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
 }
 
 @media only screen and (max-width: 564px) {
